# guess_fish

./: .gitignore  README.md  fish_data.pkl  pyproject.toml
src/weekly_1/: fish_ml.py
