[project]
name = "weekly_1"
version = "0.1.0"
description = "Weekly Project_Making a program that guess species of fish - Bream or Smelt"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = []
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
